# ma_strategy

./: EURUSD60.csv  pyproject.toml
