[tool.poetry]
name = "ma-strategy-ml"
version = "0.1.0"
description = ""
authors = ["Sean <lthon0225@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter-ascending = "^0.1.9"
fxcmpy = "^1.2.6"
pandas = "^1.1.4"
python-socketio = "^4.6.0"
duka = "^0.2.0"
forex-python = "^1.5"
pyti = "^0.2.2"
plotly = "^4.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
